Reset changes to the patch version.